bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:4: error: identifier expected but integer literal found.
    stri=stri+str[0]+str[1]+str[2];
                  ^frontTimes:4: error: ']' expected but ';' found.
    stri=stri+str[0]+str[1]+str[2];
                                  ^