bat.string1.lessons.bat.string1.FrontTimes.scala.code
def frontTimes(str:String, n:Int):String = {
  var stri:String = "";
  for(i<-1 to n){
    stri=stri+str[0]+str[1]+str[2];
  }
  return stri
}